--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "framer-motion": "^11.0.23",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.2.3",
+    "multer": "^1.4.5-lts.1",
     "node-mailer": "^0.1.1",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
